# ML-Engineering-Bootcamp

./: README.md  main.py  pyproject.toml
episode_01_project_setup_and_structure/: README.md  setup_project.sh
episode_02_data_validation/: README.md
episode_02_data_validation/notebooks/: data_validation_great_expectations.ipynb  data_validation_pandera.ipynb  data_validation_pydantic.ipynb
episode_03_feature_engineering/: README.md
episode_04_experiment_tracking_with_mlflow/: README.md
episode_05_hyperparameter_tuning_with_optuna/: README.md
episode_06_notebooks_to_scripts_and_testing/: README.md
episode_07_docker_basics/: README.md
episode_08_fastapi_basics/: README.md
episode_09_ci_cd_with_github_actions/: README.md
episode_10_aws_for_machine_learning/: README.md
