[project]
name = "ml-engineering-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.68",
    "docker>=7.1.0",
    "fastapi>=0.121.0",
    "gradio>=5.49.1",
    "great-expectations>=1.9.0",
    "hydra-core>=1.3.2",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.11.10",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "s3fs>=0.4.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
